# sbc-validator

./: .dockerignore  .gitignore  AUDIOCODES_INI.md  DASHBOARD.md  DOMAIN_REFERENCE.md  Dockerfile  EVALUATOR-START-HERE.md  LEARNINGS.md  PRODUCTION-PLAN.md  README.md  REVIEW.md  RULE_AUTHORITY.md  RUNBOOK.md  SHA256SUMS  SYNC.md  VALIDATOR-COVERAGE.md  demo.sh  fly.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
dashboard/: sbc_dashboard.html
docs/: ARCHITECTURE.md  CONFIG-REQUEST.md  DASHBOARD.md  DOMAIN_REFERENCE.md  ONE-PAGER.md  PRE-COMMIT-CONTROL.md  PRODUCTION-PLAN.md  REVIEW-FINDINGS.md  REVIEW.md  RULE_AUTHORITY.md  RUNBOOK.md  RUNSHEET.md  SECURITY.md  VALIDATOR-COVERAGE.md  WALKTHROUGH.md  sbom-cyclonedx.json
examples/ci/: ansible-sbc-gate.yml  drift-check.sh  sbc-pre-deploy-gate.yml  terraform-sbc-gate.tf
knowledge-base/: DECISIONS_AND_RATIONALE.md  FAILURE_MODE_CATALOG.md  GLOSSARY.md  NOTEBOOK-QUERIES.md  README.md  RECURSIVE_IMPROVEMENT.md  VISION_PRODUCT_ARCHITECTURE.md
marketing/: .vercelignore  business-case.html  vercel.json
marketing/dashboard/: index.html  walk-broken.json  walk-fixed.json
marketing/diagrams/: README.md  SPECS-frontend-set.md
marketing/fonts/: _fetch_fonts.py  fonts.css
research/2026-06-09-researchgravity-session/: 00-SESSION-LOG.md  01-SOURCE-INVENTORY.md  02-SYNTHESIS.md  03-REPO-STATE-AUDIT.md  04-MARKETING-SITE-AUDIT.md  05-RG-FINDINGS-LOGGED.md  06-PRIOR-ART-AND-COMPETITORS.md  07-ONPREM-EXPLAINER-POC.md  08-PATENT-FTO-BRIEF.md  09-STRATEGY-EXECUTION-MEMO.md  10-INNOVATION-SCOUT-REPORT.md  11-CONVERGENCE-SYNTHESIS.md  12-CONVICTION-ASSESSMENT.md  13-PRD-POINTER.md  README.md
rulesets/: ms_direct_routing_2026-06.json
samples/: audiocodes_carrier.ini  audiocodes_exposed.ini  audiocodes_min.ini  audiocodes_standby.ini  audiocodes_teams_real.ini  audiocodes_weak_tls.ini  broken_a.ini  chain_fullchain.pem  chain_root.pem  cisco_cube_dr.txt  clean_call.pcap  clean_pass.ini  cube_sbc_leaf.pem  make_chain.py  make_pcaps.py  one_way_audio.pcap  oracle_teams.acli  perimeta_teams.cli  reject_488.pcap  review_high.ini  ribbon_sbc.cli  ribbon_sbc_leaf.pem  sbc01_leaf.pem  topology_leak.pcap
samples/tenants/: contoso.ini  woodgrove.ini
samples/walkthrough/: sbc-teams-01-broken.ini  sbc-teams-01-fixed.ini
sbc_validator/: __main__.py  call_sim.py  cert_inspect.py  cli.py  demo.py  explainer.py  fleet.py  models.py  pcap.py  probe.py  scan_server.py  serve.py  sip_trace.py  walk.py
sbc_validator/data/: explainer_model.json
sbc_validator/parsers/: audiocodes.py  audiocodes_ini.py  base.py  cisco_cube.py  oracle.py  perimeta.py  ribbon.py
scripts/: acceptance.sh  build-review-packet.sh  claims-check.sh  integrity-manifest.sh  make-delivery.sh  sbcv-dashboard.sh
tasks/: prd-operator-coverage.json
tests/: test_compliance.py  test_explainer.py  test_probe.py  test_scan.py  test_scan_e2e.py  test_serve_reports.py  test_static_demo.py  test_validator.py
(+29 files in other folders)
