[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc-autoops-validator"
version = "0.10.0"
description = "Local-first, vendor-agnostic SBC validator (real AudioCodes/Cisco/Ribbon parsers, A-E, SRTP, HA drift, call-flow simulation, pcap explainer)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Dico Angelo" },
    { name = "Philip Drammeh" },
]
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sbc-validator = "sbc_validator.cli:main"

[tool.setuptools.packages.find]
include = ["sbc_validator*"]

[tool.setuptools.package-data]
sbc_validator = ["../rulesets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
