[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc-autoops-validator"
version = "0.16.2"
description = "Local-first, vendor-agnostic SBC validator (real AudioCodes/Cisco/Ribbon/Oracle parsers, validators A-G + security/access-control, SRTP, trust-anchor chain validation, HA drift, call-flow simulation, pcap explainer)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Dico Angelo" },
    { name = "Philip Drammeh" },
]
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sbc-validator = "sbc_validator.cli:main"

[tool.setuptools.packages.find]
include = ["sbc_validator*"]

# The dashboard viewer IS a code asset and ships in the wheel (so `serve` works
# from an installed package). Rule bundles are intentionally NOT packaged: they
# ship through the signed-rule channel (RuleClient fetch/cache) so rule updates
# stay decoupled from code releases. Pass a bundle with --ruleset, or fetch one.
[tool.setuptools.package-data]
"sbc_validator.web" = ["*.html", "*.js"]
"sbc_validator" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
